// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover activator render should render a wrapper component correctly 1`] = `
<div
  className="Activator"
  onClick={[Function]}
>
  <Trigger />
</div>
`;

exports[`Popover activator render should render correctly 1`] = `
<span
  className="Activator"
  onClick={[Function]}
>
  <Trigger />
</span>
`;

exports[`Popover popover render should render correctly 1`] = `
<Transition
  appear={false}
  enter={true}
  exit={true}
  in={false}
  mountOnEnter={true}
  onEnter={[Function]}
  onEntered={[Function]}
  onEntering={[Function]}
  onExit={[Function]}
  onExited={[Function]}
  onExiting={[Function]}
  timeout={
    Object {
      "enter": 0,
      "exit": 0,
    }
  }
  unmountOnExit={true}
>
  <Component />
</Transition>
`;

exports[`Popover popover render should use correct classnames 1`] = `
<div
  className="Wrapper top left"
>
  <div
    className="Popover sectioned"
    portalId="portal"
  >
    <span
      className="Tip"
      style={
        Object {
          "right": 50,
        }
      }
    />
    <div
      className="Content"
    >
      <WindowEvent
        event="click"
        handler={[Function]}
      />
      <WindowEvent
        event="keydown"
        handler={[Function]}
      />
      Popover Content
    </div>
  </div>
</div>
`;

exports[`Popover should measure position when opened and revert to default when closed 1`] = `"mock position"`;

exports[`Popover should measure position when opened and revert to default when closed 2`] = `
Object {
  "height": 0,
  "left": 0,
  "top": 0,
  "width": 0,
}
`;

exports[`Popover should render overlay correctly 1`] = `
<PopoverOverlay
  open={false}
  portalId="portal"
  renderActivator={[Function]}
  renderPopover={[Function]}
/>
`;

exports[`Popover should render overlay correctly 2`] = `
<Fragment>
  <span
    className="Activator"
    onClick={[Function]}
  >
    <Trigger />
  </span>
  <Portal
    containerId="portal"
  >
    <div
      className="PopoverOverlay"
      style={
        Object {
          "height": 0,
          "left": 0,
          "top": 0,
          "width": 0,
        }
      }
    >
      <Popover.Content
        activatorWidth={0}
        bottom={true}
        open={false}
        popoverRef={[Function]}
        portalId="portal"
        right={true}
        trigger={<Trigger />}
      >
        <WindowEvent
          event="click"
          handler={[Function]}
        />
        <WindowEvent
          event="keydown"
          handler={[Function]}
        />
        Popover Content
      </Popover.Content>
    </div>
  </Portal>
</Fragment>
`;
